2006-05-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/ui/menubar.xml:
	* lib/gaupol/base/delegates/__init__.py:
	* lib/gaupol/base/delegates/action.py:
	* lib/gaupol/base/delegates/edit.py:
	* lib/gaupol/base/delegates/position.py:
	* lib/gaupol/base/files/ass.py:
	* lib/gaupol/base/files/mpl2.py:
	* lib/gaupol/base/files/ssa.py:
	* lib/gaupol/base/files/subviewer2.py:
	* lib/gaupol/base/position/test/test_calc.py:
	* lib/gaupol/base/project.py:
	* lib/gaupol/gtk/delegates/__init__.py:
	* lib/gaupol/gtk/delegates/action.py:
	* lib/gaupol/gtk/delegates/position.py:
	* lib/gaupol/gtk/dialogs/duradjust.py:
	* lib/gaupol/gtk/dialogs/frconvert.py:
	* lib/gaupol/gtk/dialogs/posadjust.py:
	* lib/gaupol/gtk/dialogs/posshift.py:
	* lib/gaupol/gtk/page.py:
	* lib/gaupol/gtk/util/config.py:
	  Renamed all timeframes to positions.

2006-05-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/posadjust-dialog.glade:
	* data/glade/posshift-dialog.glade:
	* lib/gaupol/base/delegates/position.py:
	* lib/gaupol/base/position:
	* lib/gaupol/gtk/delegates/position.py:
	* lib/gaupol/gtk/dialogs/posadjust.py:
	* lib/gaupol/gtk/dialogs/posshift.py:
	  Renamed all timeframes to positions in filenames.

2006-05-15  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/timeframe/calc.py:
	* lib/gaupol/base/timeframe/test:
	* lib/gaupol/base/timeframe/test/__init__.py:
	* lib/gaupol/base/timeframe/test/test_calc.py:
	  Cleaned up code and separated testing.

2006-05-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/util/encodinglib.py:
	* lib/gaupol/base/util/langlib.py:
	  Cosmetic naming changes.

	* lib/gaupol/gtk/dialogs/about.py:
	  Fixed website url.

	* tools/pyenchant:
	* tools/pylint:
	  Adapted to above changes.

2006-05-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/util/wwwlib.py:
	  (browse_url): Renamed from open_url.

	* lib/gaupol/gtk/delegates/help.py:
	* lib/gaupol/gtk/dialogs/about.py:
	* lib/gaupol/gtk/dialogs/debug.py: